Added Summary. Trying to fix load timing issue.

--- a/popup.html
+++ b/popup.html
@@ -24,6 +24,7 @@
             <div class="progress"></div>
         </div>
         <div class="import-progress"></div>
+        <div class="summary"></div>
     </div>
 
     <script type="module" src="scripts/lib/xlsx.min.js"></script>
