--- a/popup.html
+++ b/popup.html
@@ -28,6 +28,6 @@
     </div>
 
     <script type="module" src="scripts/lib/xlsx.min.js"></script>
-    <script type="module" src="scripts/popup.js"></script>
+    <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
