Moved scripts folder

--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,7 @@
         <div class="summary"></div>
     </div>
 
-    <script type="module" src="scripts/lib/xlsx.min.js"></script>
-    <script type="module" src="scripts/main.js"></script>
+    <script type="module" src="src/scripts/lib/xlsx.min.js"></script>
+    <script type="module" src="src/scripts/main.js"></script>
 </body>
 </html>
