--- a/src/popup.html
+++ b/src/popup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collector Extension</title>
-    <link rel="stylesheet" href="src/styles/popup.css">
+    <link rel="stylesheet" href="styles/popup.css">
 </head>
 <body>
     <div class="cart-page">
@@ -27,7 +27,11 @@
         <div class="summary"></div>
     </div>
 
-    <script type="module" src="src/scripts/lib/xlsx.min.js"></script>
-    <script type="module" src="src/scripts/main.js"></script>
+    <footer>
+        <a href="https://linktr.ee/juanelfers">about the dev</a>
+    </footer>
+
+    <script type="module" src="scripts/lib/xlsx.min.js"></script>
+    <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
